# pistachio

./: .envrc  .gitignore  Cargo.toml  flake.nix  rustfmt.toml
examples/: hello-world.mustache  neil.mustache
pistachio/: Cargo.toml  build.rs
pistachio-cli/: Cargo.toml
pistachio-derive/: Cargo.toml
pistachio-derive/src/: lib.rs
pistachio-macros/: Cargo.toml
pistachio-macros/src/: lib.rs
pistachio/src/: error.rs  lexer.rs  lib.rs  macros.rs  map.rs  parser.lalrpop  parser.rs  render.rs  template.rs  value.rs  variable.rs  vars.rs
pistachio/src/parser/: grammar.lalrpop  lexer.rs  rule.rs  token.rs
pistachio/src/render/: context.rs  json.rs  lambda.rs  ser.rs  stack.rs  trace.rs  value.rs  writer.rs
pistachio/src/render/value/: json.rs  lambda.rs  literal.rs  map.rs  number.rs  pointer.rs  sequence.rs  source.rs  sum.rs
pistachio/src/template/: name.rs  tag.rs
pistachio/src/value/: map.rs  number.rs  ser.rs
pistachio/src/variable/: ser.rs
pistachio/src/vars/: encoder.rs
tests/: Cargo.toml
tests/spec/specs/: interpolation.json  partials.json  sections.json
tests/src/: main.rs  spec.rs
