[package]
name = "pistachio"
version = "0.1.0"
license = "GPL-3.0"
edition = "2021"
build = "build.rs"
workspace = ".."
readme = "../README.md"
keywords = ["html", "template", "mustache"]
categories = ["template-engine"]

[dependencies]
ahash = { version = "0.8", default-features = false }
lalrpop-util = { version = "0.19", default-features = false }
serde = { version = "1", default-features = false }
ryu = "1"
itoa = "1"

[build-dependencies]
lalrpop = { version = "0.19", default-features = false }
